@@ -405,11 +405,12 @@ public class GeneralLiteralVisitorTest {
         @Parameterized.Parameters()
         public static Iterable<Object[]> generateTestParameters() {
             return Arrays.asList(new Object[][]{
-                    {"1.1", "1.1", "java.math.BigDecimal"},
-                    {"-0.1", "-0.1", "java.math.BigDecimal"},
-                    {"1.0E+12", "1.0E12", "java.math.BigDecimal"},
-                    {"-0.1E-12", "-0.1E-12", "java.math.BigDecimal"},
-                    {"1E12", "1E12", "java.math.BigDecimal"},
+                    // default
+                    {"1.1", "1.1", "java.lang.Double"},
+                    {"-0.1", "-0.1", "java.lang.Double"},
+                    {"1.0E+12", "1.0E12", "java.lang.Double"},
+                    {"-0.1E-12", "-0.1E-12", "java.lang.Double"},
+                    {"1E12", "1E12", "java.lang.Double"},
                     // float
                     {"1.1f", "1.1", "java.lang.Float"},
                     {"-0.1F", "-0.1", "java.lang.Float"},
@@ -438,7 +439,14 @@ public class GeneralLiteralVisitorTest {
             final Constructor<?> ctor = clazz.getConstructor(String.class);
             final Object expectedValue = ctor.newInstance(expected);
 
-            assertEquals(expectedValue, new GenericLiteralVisitor(new GremlinAntlrToJava()).visitFloatLiteral(ctx));
+            Object result = new GenericLiteralVisitor(new GremlinAntlrToJava()).visitFloatLiteral(ctx);
+            if (expectedValue instanceof Double) {
+                assertEquals((Double) expectedValue, (Double) result, 0.00000001);
+            } else if (expectedValue instanceof Float) {
+                assertEquals((Float) expectedValue, (Float) result, 0.00000001);
+            } else {
+                assertEquals(expectedValue, result);
+            }
         }
     }
 
@@ -603,7 +611,7 @@ public class GeneralLiteralVisitorTest {
             assertEquals(10, genericLiterals.get(1));
 
             // verify 3rd element
-            assertEquals(new BigDecimal(14.5), genericLiterals.get(2));
+            assertEquals(new Double(14.5), genericLiterals.get(2));
 
             // verify 4th element
             assertEquals("hello", genericLiterals.get(3));
